# tapcraft-os

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  LLM_WORKFLOW_GENERATION.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  test_agent_workflow.py  test_api.py  test_llm_workflow.py
.devcontainer/: .env.services  Makefile  devcontainer.json  devcontainer.yml  services.yml
.github/workflows/: ci.yml  pages.yml
alembic/: env.py
alembic/versions/: 3f975be682d6_initial_schema_with_all_domain_models.py  add_repo_fields_to_workspaces.py  add_secrets_table.py
docs/: base requirements.md  qa-report.md  ui_concept.md
docs/plans/: 2026-02-05-copilot-sdk-integration-design.md  2026-02-06-ui-restyle-design.md
examples/gtm-dashboard/: README.md
site/: docs.html  index.html
src/: setup_schedules.py
src/activities/: __init__.py  browse_activity.py  dedup.py  http_parallel.py  rss_reader.py  xml_parser.py
src/api/: auth.py  server.py
src/config/: __init__.py  defaults.py  llm_config.py
src/db/: __init__.py  base.py  models.py
src/mcp/: __init__.py  __main__.py  server.py
src/models/: agent_models.py  core.py  schemas.py
src/services/: activity_registry.py  activity_sync.py  agent_service.py  capabilities_service.py  code_generator.py  crud.py  execution_tracker.py  git_service.py  graph_builder.py  llm_graph_generator.py  memory_service.py  repo_sync.py  schedule_service.py  secrets.py  template_service.py  temporal_import.py  temporal_service.py  validation_service.py  workflow_health.py  workflow_orchestrator.py  workflow_resolver.py
src/worker/: worker.py
src/workflows/: __init__.py
ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
ui/src/: main.tsx  styles.css  types.ts
ui_sketches/tapcraft_agent_assistant/: code.html
(+81 files in other folders)
