[tool.poetry]
name = "tapcraft-os"
version = "0.1.0"
description = "Automation platform built on Temporal, MCP, and Git"
authors = ["tapcraft-io"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
temporalio = "^1.5.0"
pydantic = "^2.6.4"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}
alembic = "^1.13.0"
aiosqlite = "^0.20.0"
cryptography = "^42.0.0"
feedparser = "^6.0.0"
mcp = "^1.0.0"

[tool.poetry.scripts]
tapcraft-mcp = "src.mcp.server:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
mypy = "^1.8.0"
pytest = "^8.1.1"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.mypy]
python_version = "3.11"
strict = false
packages = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
